--- a/week02/index.html
+++ b/week02/index.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/jaramilloa/jaramilloa.github.io/blob/main/week02/kpop.jpg">
+<img src="https://github.com/jaramilloa/jaramilloa.github.io/week02/kpop.jpg">
