--- a/week02/index.html
+++ b/week02/index.html
@@ -1,1 +1,12 @@
-<img src="https://github.com/jaramilloa/jaramilloa.github.io/week02/kpop.jpg">
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>Week 2 Image</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1>Using an image in the page.</h1>
+  <img src="https://github.com/jaramilloa/jaramilloa.github.io/week02/kpop.jpg">
+</body>
+</html>
