--- a/week02/index.html
+++ b/week02/index.html
@@ -8,7 +8,6 @@
 <body>
   <h1>Using an image in the page.</h1>
   <img src="https://github.com/jaramilloa/jaramilloa.github.io/week02/kpop.jpg" alt="Description of the image"
-  alt= "Three of the kpop girl groups"
-     width="600" height="700">>
+  alt= "Three of the kpop girl groups" width="350">
 </body>
 </html>
