--- a/week02/index.html
+++ b/week02/index.html
@@ -9,5 +9,6 @@
   <h1>Using an image in the page.</h1>
   <img src="https://github.com/jaramilloa/jaramilloa.github.io/week02/kpop.jpg" alt="Description of the image"
   alt= "Three of the kpop girl groups" width="350">
+  <p><a href="jaramilloa.github.io/week02/index.html">Visit my test page</a></p>
 </body>
 </html>
