--- a/week02/Coding101.html
+++ b/week02/Coding101.html
@@ -57,7 +57,7 @@
 
   <p style="color: purple;"> Thank you for taking time to read my page. Hope you learned a little more about myself. I hoped you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
 
-  <p><a href="jaramilloa.github.io/week02/kpop.jpg">Visit my kpop image page</a></p>
+  <p><a href="jaramilloa.github.io/week02/index.html">Visit my kpop image page</a></p>
 
   <footer style="text-align: center;">
     <p>Copyright &copy; 2021 Ana Jaramillo</p>
