--- a/random/index.html
+++ b/random/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <title> Birthday invitation </title>
-  <link href="hb" rel="stylesheet" type="text/css" />
+  <link href="hb.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1 style="text-shadow: 8px 8px 10px pink"> Twenty </h1>
