--- a/random/index.html
+++ b/random/index.html
@@ -8,7 +8,8 @@
   <body>
     <h1 style="text-shadow: 8px 8px 10px pink"> Twenty </h1>
     <h2 style="text-shadow: 8px 8px 10px pink"> One </h2>
+    </body>
 
-     <body1 style="font-family: cursive">
-       You are invited to my twenty first birthday party!
+     <body1 style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
+You are invited to my twenty first birthday party!
     </body1>
