--- a/random/index.html
+++ b/random/index.html
@@ -13,3 +13,6 @@
      <body1 style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
 You are invited to my twenty first birthday party!
     </body1>
+  <body2 style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
+    SATURDAY SEPTEMBER 25TH AT PM
+</body2>
