--- a/random/index.html
+++ b/random/index.html
@@ -10,7 +10,7 @@
     <h2 style="text-shadow: 8px 8px 10px pink"> One </h2>
     </body>
 
-     <body1 style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
+     <body1 style="font-family: 'Brush Script MT',cursive" style="text-shadow: 8px 8px 10px pink">
 You are invited to my twenty first birthday party!
     </body1>
   <p style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
