--- a/random/index.html
+++ b/random/index.html
@@ -13,6 +13,6 @@
      <body1 style="font-family: 'Brush Script MT',cursive" style="text-shadow: 8px 8px 10px pink">
 You are invited to my twenty first birthday party!
     </body1>
-  <p style="font-family: cursive" style="text-shadow: 8px 8px 10px pink">
+  <p style="font-family: 'Brush Script MT', cursive" style="text-shadow: 8px 8px 10px pink">
     SATURDAY SEPTEMBER 25TH AT PM
 </p>
