--- a/random/index.html
+++ b/random/index.html
@@ -15,5 +15,7 @@ You are invited to my twenty first birthday party!
     </body1>
   <p style="text-shadow: 8px 8px 10px pink">
     SATURDAY SEPTEMBER 25TH AT PM
+  </p>
+  <p2 style="text-shadow: 8px 8px 10px pink">
     Food will be Guiso de puerco (Red Chile Pork Stew) and Pizza
-</p>
+</p2>
