--- a/random/index.html
+++ b/random/index.html
@@ -16,6 +16,6 @@ You are invited to my twenty first birthday party!
   <p style="text-shadow: 8px 8px 10px pink">
     SATURDAY SEPTEMBER 25TH AT PM
   </p>
-  <p2 style="text-shadow: 8px 8px 10px pink">
+  <p style="text-shadow: 8px 8px 10px pink">
     Food will be Guiso de puerco (Red Chile Pork Stew) and Pizza
-</p2>
+</p>
