--- a/random/index.html
+++ b/random/index.html
@@ -10,9 +10,9 @@
     <h2 style="text-shadow: 8px 8px 10px pink"> One </h2>
     </body>
 
-     <body1 style="font-family: 'Brush Script MT', cursive" style="text-shadow: 8px 8px 10px pink">
+     <body1 style="font-family: 'Brush Script MT', cursive" style="text-shadow: 8px 8px 10px pink"><strong>
 You are invited to my twenty first birthday party!
-    </body1>
+</strong></body1>
   <p style="text-shadow: 8px 8px 10px pink">
     SATURDAY SEPTEMBER 25TH AT PM
   </p>
