--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -15,6 +15,7 @@
   </head>
 
  <body>
+   <div>
    <p>This is a simple Tortilla Pizza recipe that was originally posted to cookieandkate.com.</p>
   <section>
   <h3>Ingredients</h3>
@@ -46,8 +47,7 @@ barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped re
 Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
 Arugula pesto, basil pesto or light marinara sauce, mozzarella (optional), fresh arugula and parmesan shavings added after baking (like this).
 Red pepper pesto and goat cheese.
-Anything you want!
-
+Anything you want!</div>
   <footer><p>
 Photo and recipe courtesy of cookieandkate.com
     </p> </footer>
