--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -23,7 +23,8 @@
     <li>1/4 cup sauce (marinara, pesto, olive oil and garlic, barbecue sauce)</li>
     <li>1/3 cup or less shredded/crumbled cheese (mozzarella, cheddar, goat, feta)</li>
     <h3>Toppings (go wild!)</h3>
-
+</div>
+<div>
     <h3>Instructions</h3>
     <ol>
       <li>Preheat the oven to 425 degrees Fahrenheit.</li>
