--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -42,6 +42,9 @@ If you don’t have a cast iron skillet I highly recommend getting one, but you 
 <p>Make sure to check the ingredients list on the whole wheat tortillas. It should list about 5 ingredients, not 25. I buy mine at health food stores and store them in the fridge or freezer and they almost never go bad.</p>
 
   <h3>Topping ideas:</h3>
+  <aside>
+    <a href="tortilla-pizza-recipe4.jpg">
+    </aside>
 
 As shown:
 barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped red onion, sliced fresh jalapeño, fresh or defrosted frozen pineapple (canned pineapple is not as good).
