--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -43,7 +43,7 @@ If you don’t have a cast iron skillet I highly recommend getting one, but you 
 
   <h3>Topping ideas:</h3>
   <aside>
-    <a href="tortilla-pizza-recipe4.jpg">
+    <img src="tortilla-pizza-recipe4.jpg">
     </aside>
 
 As shown:
