--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -44,7 +44,7 @@
   <h3>Topping ideas:</h3>
   <aside>
     <img src="tortilla-pizza-recipe4.jpg">
-
+</aside>
 As shown:
 barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped red onion, sliced fresh jalapeño, fresh or defrosted frozen pineapple (canned pineapple is not as good).
 Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
