--- a/random/index.html
+++ b/random/index.html
@@ -14,7 +14,7 @@
 You are invited to my twenty first birthday party!
 </strong></body1>
   <p style="text-shadow: 8px 8px 10px pink">
-    SATURDAY SEPTEMBER 25TH AT PM
+    SATURDAY SEPTEMBER 25TH AT 6 PM
   </p>
   <p style="text-shadow: 8px 8px 10px pink">
     Food will be Guiso de puerco (Red Chile Pork Stew) and Pizza
