--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -10,7 +10,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Cookie Recipe</title>
   </head>
 
