--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -21,13 +21,13 @@
    </section>
 </div>
     <main>
+    <div>
   <h3>Ingredients</h3>
     <li>1 whole wheat tortilla (or whole wheat pita bread)</li>
     <li>1/4 cup sauce (marinara, pesto, olive oil and garlic, barbecue sauce)</li>
     <li>1/3 cup or less shredded/crumbled cheese (mozzarella, cheddar, goat, feta)</li>
     <h3>Toppings (go wild!)</h3>
 
-<div>
     <h3>Instructions</h3>
     <ol>
       <li>Preheat the oven to 425 degrees Fahrenheit.</li>
@@ -36,7 +36,8 @@
       <li>Sprinkle with cheese and toppings. </li>
 <li>Bake for 12-14 minutes, until the cheese is golden and bubbling (no sooner!) and the edges of the tortilla are lightly browned.</li>
   <li>Slice and serve.</li>
-    </ol>
+</ol> </div>
+    <div>
   <h3>Notes</h3>
 <p>If you don’t have a cast iron skillet I highly recommend getting one, but you can use an oven-safe baking rack or bake it directly on the rack of your toaster oven instead. Bake at 400 degrees for 8 to 11 minutes. Do not use a regular baking sheet because the bottom of the tortilla will not get crispy, your cheese will slide right off and you’ll wish you ordered out.</p>
 
