--- a/week04/cookierecipe.html
+++ b/week04/cookierecipe.html
@@ -36,24 +36,25 @@
       <li>Sprinkle with cheese and toppings. </li>
 <li>Bake for 12-14 minutes, until the cheese is golden and bubbling (no sooner!) and the edges of the tortilla are lightly browned.</li>
   <li>Slice and serve.</li>
-</ol> </div>
-    <div>
+</ol>
+
   <h3>Notes</h3>
 <p>If you don’t have a cast iron skillet I highly recommend getting one, but you can use an oven-safe baking rack or bake it directly on the rack of your toaster oven instead. Bake at 400 degrees for 8 to 11 minutes. Do not use a regular baking sheet because the bottom of the tortilla will not get crispy, your cheese will slide right off and you’ll wish you ordered out.</p>
 
 <p>Although I have not tried it personally, Kim tried making tortilla pizzas in her cast iron skillet on a gas grill and said they turned out great!</p>
-<p>Make sure to check the ingredients list on the whole wheat tortillas. It should list about 5 ingredients, not 25. I buy mine at health food stores and store them in the fridge or freezer and they almost never go bad.</p>
-
+<p>Make sure to check the ingredients list on the whole wheat tortillas. It should list about 5 ingredients, not 25. I buy mine at health food stores and store them in the fridge or freezer and they almost never go bad.</p></div>
+<div>
   <h3>Topping ideas:</h3>
-  <aside>
-    <img src="tortilla-pizza-recipe4.jpg">
-</aside>
-As shown:
+<p>As shown:
 barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped red onion, sliced fresh jalapeño, fresh or defrosted frozen pineapple (canned pineapple is not as good).
 Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
 Arugula pesto, basil pesto or light marinara sauce, mozzarella (optional), fresh arugula and parmesan shavings added after baking (like this).
 Red pepper pesto and goat cheese.
-Anything you want! </main></aside></div>
+Anything you want!</p>
+<aside>
+  <img src="tortilla-pizza-recipe4.jpg">
+</aside></main>
+</aside></div>
   <footer><p>
 Photo and recipe courtesy of cookieandkate.com
     </p> </footer>
