--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -4,22 +4,20 @@
      Date: 9-14-21
      Section: ITSE-1411
 
-     This is an example of a cookie recipe
+     This is an example of a Tortilla Pizza recipe.
 -->
 
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Cookie Recipe</title>
+    <title>Tortilla Pizza Recipe</title>
   </head>
 
  <body>
-   <div>
      <section>
    <p>This is a simple Tortilla Pizza recipe that was originally posted to cookieandkate.com.</p>
    </section>
-</div>
     <main>
     <div>
   <h3>Ingredients</h3>
