--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -14,11 +14,24 @@
     <title>Tortilla Pizza Recipe</title>
   </head>
 
+
  <body>
+   <header>
+     <h1> Tortilla Pizza Recipe </h1>
+
+     <nav>
+     <ul>
+       <li><span>Home</span></li>
+       <li><a href="#">Get started</a></li>
+       <li><a href="#">Photos</a></li>
+       <li><a href="#">Gear</a></li>
+       <li><a href="#">Forum</a></li>
+     </ul>
+     </nav>
      <section>
-       <h> Tortilla Pizza Recipe> </h>
    <p>This is a simple Tortilla Pizza recipe that was originally posted to cookieandkate.com.</p>
    </section>
+ </header>
     <main>
     <div>
   <h3>Ingredients</h3>
