--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -29,7 +29,7 @@
      </nav>
  </header>
  <section>
- <p>This is a simple Tortilla Pizza recipe that was originally posted to <a href="cookieandkate.com">cookieandkate.com.</a></p>
+ <p>This is a simple Tortilla Pizza recipe that was originally posted to <a href="https://cookieandkate.com/">cookieandkate.com</a>.</p>
  </section>
     <main>
     <div>
@@ -67,7 +67,7 @@ Anything you want!</p>
 </aside></main>
 </aside></div>
   <footer><p>
-Photo and recipe courtesy of <a href="cookieandkate.com">cookieandkate.com</a>
+Photo and recipe courtesy of <a href="https://cookieandkate.com/">cookieandkate.com</a>
     </p> </footer>
   </body>
 </html>
