--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -15,7 +15,7 @@
   </head>
 
 
- <body>
+ <body><article>
    <header>
      <h1> Tortilla Pizza Recipe </h1>
      <nav>
@@ -69,5 +69,5 @@ Anything you want!</p>
   <footer><p>
 Photo and recipe courtesy of <a href="https://cookieandkate.com/">cookieandkate.com</a>
     </p> </footer>
-  </body>
+  </body></article>
 </html>
