--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -17,7 +17,7 @@
 
  <body><article>
    <header>
-     <h1> Tortilla Pizza Recipe </h1>
+     <h1> Tortilla Pizza Recipe </h1> </article>
      <nav>
      <ul>
        <li><span>Home</span></li>
