--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -15,9 +15,9 @@
   </head>
 
 
- <body><article>
+ <body>
    <header>
-     <h1> Tortilla Pizza Recipe </h1> </article>
+     <h1> Tortilla Pizza Recipe </h1>
      <nav>
      <ul>
        <li><span>Home</span></li>
@@ -69,5 +69,5 @@ Anything you want!</p>
   <footer><p>
 Photo and recipe courtesy of <a href="https://cookieandkate.com/">cookieandkate.com</a>
     </p> </footer>
-  </body></article>
+  </body>
 </html>
