--- a/week04/tortillapizza.html
+++ b/week04/tortillapizza.html
@@ -10,7 +10,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styletwo.css">
     <title>Tortilla Pizza Recipe</title>
   </head>
 
