--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Web Design 2: Ana's Javascript Page</title>
-    <script>
+<script>
   function showAlert() {
-    alert ("Hello world!");
+    var myText = "Welcome my fellow aliens!";
+    alert (myText);
   }
   </script>
   </head>
