--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -9,8 +9,25 @@
     alert (myText);
   }
   </script>
+    <style>
+      button {
+    font-size: 1.1em;
+    background-color: #e7defa;
+    color: #c4aef2;
+    border: 2px solid black;
+    box-shadow: 4px 4px 4px #999999;
+  }
+  button:hover, button:focus, button:active {
+    /* swap colors */
+    color: #EBF5FF;
+    background-color: #4312AE;
+    cursor: pointer; /* displays a hand */
+  }
+    </style>
   </head>
-  <body onload="showAlert()">
-    <!-- The content of your web page will go here -->
+  <body>
+    
+    <button onclick="showAlert()">Show alert</button>
+    
   </body>
 </html>
