--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -12,15 +12,15 @@
     <style>
       button {
     font-size: 1.1em;
-    background-color: #e7defa;
-    color: #c4aef2;
+    background-color: #c4aef2;
+    color: #e7defa;
     border: 2px solid black;
     box-shadow: 4px 4px 4px #999999;
   }
   button:hover, button:focus, button:active {
     /* swap colors */
     color: #EBF5FF;
-    background-color: #4312AE;
+    background-color: #9067eb;
     cursor: pointer; /* displays a hand */
   }
     </style>
