--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -13,7 +13,7 @@
       button {
     font-size: 1.1em;
     background-color: #c4aef2;
-    color: #e7defa;
+    color: #000000;
     border: 2px solid black;
     box-shadow: 4px 4px 4px #999999;
   }
