--- a/birthday/birthday.html
+++ b/birthday/birthday.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="birthday.css">
 <div class="birthdayCard">
 <div class="cardFront">
   <div class="front-text">
