--- a/birthday/birthday.html
+++ b/birthday/birthday.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" type="text/css" href="birthday.css">
+<!doctype html>
+<html>
+  <link rel="stylesheet" type="text/css" href="birthday.css">
 <div class="birthdayCard">
 <div class="cardFront">
   <div class="front-text">
@@ -33,3 +35,4 @@
     </div>
   </div>
 </div>
+</html>
