--- a/birthday/birthday.html
+++ b/birthday/birthday.html
@@ -30,7 +30,7 @@
   </div>
     <div class="wishes">
     <p>Dear Mir,</p>
-    <p>Happy birthday!! I hope that you have a good birthday. Keep on being a sexy very very bad boy (:</p>
+    <p>Happy birthday!! I hope that you have a good birthday. Keep on being a very very bad boy (:</p>
     <p class="name">Nillo</p>
     </div>
   </div>
