--- a/birthday/index.html
+++ b/birthday/index.html
@@ -1,11 +1,57 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>mir birthday page</title>
+  <title>Birthday Idea</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-  
-  <p> this paragraph will add some of the birthday cards <a = href"https://jaramilloa.github.io/birthday/birthday.html">nillo</a> birthday card.
-  </p>
-</html>
+<body>
+  <h1>This is the outline for the birthday idea page</h1>
+ <p>I am working on this page for mir birthday. Anywho lets get started.&#128522;</p>
+  <p>&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;</p>
+  <p>For starters, I want to introduce myself. This is Nillo<br>
+  I want to welcome you fellow aliens <span>&#128406;&#127996;</span>&#128125; to mir birthday page. In case you are wondering why I call you all aliens, it is because I am a &#9789; <em>moonchild!</em> &#9790;</p>
+<p style="color: purple;"> &#9753;I hope you enjoy your time being here. And by here I mean both Earth and my page. Enjoy!&#10087;</p>
+  <h2>My website for mir birthday</h2>
+
+<p>gssghrdfgvsdfaeas:</p>
+
+<h3 style="color: blue;">Blah Blah</h3>
+  <p>&#128394;&#128394;&#128394;&#128394;&#128394;&#128394;&#128394;&#128394;</p>
+
+  <p>Dfhsjfkheidv vnjdsvnuidv vdhvjnaa vbsvnzx</p>
+
+<h3 style="color: blue;">Videos</h3>
+  <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;<p>
+
+<p>bsbsbsfbygjnfgbs.</p>
+
+<h3 style="color: blue;">Music</h3>
+  <p>&#9835;&#9835;&#9835;&#9835;&#9835;&#9835;&#9835;&#9835;</p>
+
+  <p>Whrfhdfb.</p>
+
+  <ul>
+  <li>Itzy</li>
+  <li>Twice</li>
+  <li>Blackpink</li>
+  <li>Girls Generation</li>
+  <li>Red Relvet</li>
+  <li>Everglow</li>
+  <li>Dreamcatcher</li>
+
+</ul>
+
+  <h3 style="color: blue;"> Food</h3>
+  <p>&#127869;&#127869;&#127869;&#127869;&#127869;&#127869;&#127869;&#127869;</p>
+  <p> nbdfdcssvdbgdnfhyhfnfg </p>
+
+  <p style="color: purple;"> Thank you for taking time to read my page. Hope you learned a little more about myself. I hoped you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
+
+  <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my image page</a></p>
+
+  <footer style="text-align: center;">
+    <p>Copyright &copy; 2021 Ana Jaramillo</p>
+   </footer>
+  </body>
+  </html>
