--- a/birthday/index.html
+++ b/birthday/index.html
@@ -16,8 +16,6 @@
 
 <p>gssghrdfgvsdfaeas:</p>
 
-<h3 style="color: blue;">Blah Blah</h3>
-
   <p>Dfhsjfkheidv vnjdsvnuidv vdhvjnaa vbsvnzx</p>
 
 <h3 style="color: blue;">Happy Birthday Videos</h3>
@@ -27,10 +25,10 @@
 
   <p style="color: purple;"> Thank you for taking time to read my page. Hope you learned a little more about myself. I hoped you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
 
-  <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my image page</a></p>
+  <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my birthday card</a></p>
 
   <footer style="text-align: center;">
-    <p>Copyright &copy; 2021 Ana Jaramillo</p>
+    <p>Copyright &copy; 202 Nillo</p>
    </footer>
   </body>
   </html>
