--- a/birthday/index.html
+++ b/birthday/index.html
@@ -9,8 +9,8 @@
   <h1>This is the outline for the birthday idea page</h1>
  <p>I am working on this page for Mir birthday. Anywho lets get started.&#128522;</p>
   <p>&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;&#127989;</p>
-  <p>For starters, I want to introduce myself. This is Nillo<br>
-  I want to welcome you fellow aliens <span>&#128406;&#127996;</span>&#128125; to mir birthday page. In case you are wondering why I call you all aliens, it is because I am a &#9789; <em>moonchild!</em> &#9790;</p>
+  <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.<br>
+  I want to welcome you to Mir birthday page. This will be for our &#9789; <em>moonchild!</em> &#9790;</p>
 <p style="color: purple;"> &#9753;I hope you enjoy your time being here. And by here I mean both Earth and my page. Enjoy!&#10087;</p>
   <h2>My website for Mir birthday</h2>
 
@@ -23,7 +23,7 @@
 
 <p>bsbsbsfbygjnfgbs.</p>
 
-  <p style="color: purple;"> Thank you for taking time to read my page. Hope you learned a little more about myself. I hoped you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
+  <p style="color: purple;"> Thank you for taking time to read my page. I hope you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
 
   <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my birthday card</a></p>
 
