--- a/birthday/index.html
+++ b/birthday/index.html
@@ -2,30 +2,29 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>Birthday Idea</title>
+  <title>Mir's Birthday Page </title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>This is the outline for the birthday idea page</h1>
- <p>I am working on this page for Mir birthday. Anywho lets get started.&#128522;</p>
+  <h1>&#127882;Welcome to Moon Dragon Birthday Gift!&#127882;</h1>
+  <h2>&#127882;Moon Dragon 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
+  
+ <span style='font-size:100px;'>&#127874;</span>
   <p>&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;</p>
   <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.<br>
-  I want to welcome you to Mir birthday page. This will be for our &#9789; <em>moonchild!</em> &#9790;</p>
-<p style="color: purple;"> &#9753;I hope you enjoy your time being here. And by here I mean both Earth and my page. Enjoy!&#10087;</p>
-  <h2>My website for Mir birthday</h2>
+  I want to welcome you Mir to your birthday webpage. This is for you, our &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
+<p style="color: purple;"> &#9753;I hope you enjoy this gift that we have prepared for you in your special day. Enjoy!&#10087;</p>
 
-<p>gssghrdfgvsdfaeas:</p>
-
-  <p>Dfhsjfkheidv vnjdsvnuidv vdhvjnaa vbsvnzx</p>
-
-<h3 style="color: blue;">Happy Birthday Videos</h3>
+<h3 style="color: blue;">&#127881;Happy Birthday Videos&#127881;</h3>
   <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;<p>
 
-<p>bsbsbsfbygjnfgbs.</p>
+<p>The following are/is video compilations that have been put together from your fans for you ^-^ </p>
+  
+ <h3 style="color: blue;">&#127881;Happy Birthday Cards&#127881;</h3>
+    <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my birthday card</a></p>
 
-  <p style="color: purple;"> Thank you for taking time to read my page. I hope you enjoyed your time here, and I hope to see you soon! Goodbye~ &#129322; </p>
+  <p style="color: purple;"> I hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you~ &#129322; </p>
 
-  <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Visit my birthday card</a></p>
 
   <footer style="text-align: center;">
     <p>Copyright &copy; 2022 Nillo</p>
