--- a/birthday/index.html
+++ b/birthday/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <title>Mir's Birthday Page </title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+h1 {text-align: center;}
+h2{text-align: center;}
+    p1 {text-align: center;}
+
+</style>
 </head>
 <body>
   <h1>&#127882;Welcome to Moon Dragon Birthday Gift!&#127882;</h1>
   <h2>&#127882;Moon Dragon 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
   
- <span style='font-size:100px;'>&#127874;</span>
+  <p1><span style='font-size:100px;'>&#127874;</span></p1>
   <p>&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;</p>
   <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.<br>
   I want to welcome you Mir to your birthday webpage. This is for you, our &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
