--- a/birthday/index.html
+++ b/birthday/index.html
@@ -7,7 +7,6 @@
   <style>
 h1 {text-align: center;}
 h2{text-align: center;}
-    p1 {text-align: center;}
 
 </style>
 </head>
@@ -15,14 +14,17 @@ h2{text-align: center;}
   <h1>&#127882;Welcome to Moon Dragon Birthday Gift!&#127882;</h1>
   <h2>&#127882;Moon Dragon 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
   
-  <p1><span style='font-size:100px;'>&#127874;</span></p1>
-  <p>&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;</p>
+  <h2><span style='font-size:100px;'>&#127874;</span></h2>
+  <p>&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;&#10084;</p>
   <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.<br>
-  I want to welcome you Mir to your birthday webpage. This is for you, our &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
-<p style="color: purple;"> &#9753;I hope you enjoy this gift that we have prepared for you in your special day. Enjoy!&#10087;</p>
+  I want to welcome Mir to your birthday webpage. <br>
+  나는 당신의 생일 웹 페이지에 Mir를 환영하고 싶습니다<br>
+  This is for you, our &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
+<p style="color: purple;"> &#9753;I hope you enjoy this gift that we have prepared for you in your special day. Enjoy!&#10087;<br>
+ &#9753;특별한 날 저희가 준비한 이 선물을 즐기시기 바랍니다. 즐기다!&#9753;</p>
 
 <h3 style="color: blue;">&#127881;Happy Birthday Videos&#127881;</h3>
-  <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;<p>
+  <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;<p>
 
 <p>The following are/is video compilations that have been put together from your fans for you ^-^ </p>
   
