--- a/birthday/index.html
+++ b/birthday/index.html
@@ -16,17 +16,17 @@ h2 {text-align: center;}
   <h2>&#127882;Moon Dragon 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
   
   <h2><span style='font-size:100px;'>&#127874;</span></h2>
-  <p>&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;&#9825;&#10084;</p>
+  <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;</p>
   <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.</p>
   <p>I want to welcome Mir to your birthday webpage. <br>
     나는 당신의 생일 웹 페이지에 Mir를 환영하고 싶습니다</p>
-  <p>This is for you, our &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
+  <p>This is for you, our <br> &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
 <p style="color: purple;"> &#9753;I hope you enjoy this gift that we have prepared for you in your special day. Enjoy!&#10087;<br>
  &#9753;특별한 날 저희가 준비한 이 선물을 즐기시기 바랍니다. 즐기다!&#9753;</p>
 
 <h3 style="color: blue;">&#127881;Happy Birthday Videos&#127881;<br>
  &#127881;생일 축하 비디오&#127881;</h3>
-  <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;<p>
+  <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;</p>
 
 <p>The following are/is video compilations that have been put together from your fans for you ^-^ <br>
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
