--- a/birthday/birthday.html
+++ b/birthday/birthday.html
@@ -29,8 +29,10 @@
   <h3 class="toyou">to you!</h3>  
   </div>
     <div class="wishes">
-    <p>Dear Mir,</p>
-    <p>Happy birthday!! I hope that you have a good birthday. Keep on being a very very bad boy (:</p>
+    <p>Dear Mir, or should I say giraffe?&#129426; kidding <br>
+      Dear Mir, 아니면 기린이라고 해야 할까요?&#129426; 농담</p>
+    <p>Happy birthday!! I hope that you have a good birthday ^-^ Meeting you has been the best thing that has happened to me this year. Thank you for always making me smile everyday. You came into my life when I needed someone the most, you noticed me when no one else did. That is why I thank you. I know I am a stranger but you can count on me no matter what. You deserve the universe, do not ever settle for less. You are such an amazing and beautiful soul. Keep on smiling because your smile lights up the room. May all your wishes come true. I am very proud of you. I wish you the very best moving forward! Oh, and keep on being a very very bad boy (: <br>
+      생일 축하!! 생일 잘 보내시길 바랍니다 ^-^ 당신을 만난 것이 올해 최고의 일이었습니다. 매일매일 웃게 해주셔서 감사합니다. 당신은 내가 누군가를 가장 필요로 할 때 내 삶에 들어왔고, 아무도 없을 때 나를 알아차렸습니다. 그래서 감사합니다. 나는 내가 낯선 사람이라는 것을 알고 있지만 어떤 일이 있어도 나를 믿을 수 있습니다. 당신은 우주를 누릴 자격이 있습니다. 더 적은 것에 만족하지 마십시오. 당신은 정말 놀랍고 아름다운 영혼입니다. 당신의 미소가 방을 밝게 하기 때문에 계속 웃으세요. 모든 소원이 이루어지길. 나는 당신을 매우 자랑스럽게 생각합니다. 무궁한 발전을 기원합니다! 오, 그리고 계속해서 아주 아주 나쁜 소년이 되십시오. (:</p>
     <p class="name">Nillo</p>
     </div>
   </div>
