--- a/birthday/birthdayt.html
+++ b/birthday/birthdayt.html
@@ -31,7 +31,7 @@
     <div class="wishes">
     <p>HAPPY BIRTHDAY MIR!&#127874;<br>
       To my favorite bad boy in the world,I am happy that you became someone important to me in such little time and how we got along very well. I hope this never ends and we can keep on being friends for the longest time! <br> Just like the moon in space, there is so much out there to explore. That's the same for you mir. You go and discover new things, places, and even people with the time that you have! Please take care okay? I really wish the best fr you, you mean everything to us mir and remember that eac an one f us love you till the moon and back!&#127874;&#127769;&#10084;</p>
-    <p class="name">Nillo</p>
+    <p class="name">Tokkito</p>
     </div>
   </div>
 </div>
