--- a/birthday/birthdayj.html
+++ b/birthday/birthdayj.html
@@ -26,7 +26,7 @@
      <div class="inside-text">
   <h3 class="happy">HAPPY</h3>
   <h2 class="bday">BIRTHDAY</h2> 
-  <h3 class="toyou">to you!</h3>  
+  <h3 class="toyou">TO YOU!</h3>  
   </div>
     <div class="wishes">
     <p>생일 축하해요, 미르! 당신의 계정을 찾아서 기쁘다고 말할 때 모두를 대 변할 수 있을 것 같습니다 ^^ 우리를 행복하게 해줘서 고마워요. 오빠, 즐 거운 생일 보내길 바래요~ ☆♡
