--- a/birthday/birthdayt.html
+++ b/birthday/birthdayt.html
@@ -26,7 +26,7 @@
      <div class="inside-text">
   <h3 class="happy">HAPPY</h3>
   <h2 class="bday">BIRTHDAY</h2> 
-  <h3 class="toyou">to you!</h3>  
+  <h3 class="toyou">TO YOU!</h3>  
   </div>
     <div class="wishes">
     <p>HAPPY BIRTHDAY MIR!&#127874;<br>
