--- a/birthday/birthday.html
+++ b/birthday/birthday.html
@@ -26,7 +26,7 @@
      <div class="inside-text">
   <h3 class="happy">HAPPY</h3>
   <h2 class="bday">BIRTHDAY</h2> 
-  <h3 class="toyou">to you!</h3>  
+  <h3 class="toyou">TO YOU!</h3>  
   </div>
     <div class="wishes">
     <p>Dear Mir, 아니면 기린이라고 해야 할까요?&#129426; 농담<br>
