--- a/birthday/index.html
+++ b/birthday/index.html
@@ -32,6 +32,8 @@ h2 {text-align: center;}
 <p>The following are/is video compilations that have been put together from your fans for you ^-^ <br>
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
   
+  <p><a href="https://jaramilloa.github.io/birthday/Vid%C3%A9o.mov"> Izzie birthday video</a></p>
+  
  <h3 style="color: blue;">&#127881;Happy Birthday Cards&#127881;<br>
   &#127881;생일 축하 카드&#127881;</h3>
     <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Nillo birthday card</a></p>
