--- a/birthday/index.html
+++ b/birthday/index.html
@@ -40,6 +40,7 @@ h2 {text-align: center;}
     <p><a href="https://jaramilloa.github.io/birthday/birthdayt.html">Tokkito birthday card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdayj.html"> Jay birthday card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdayjf.html"> Jackie birthday card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdaym.html"> Mie birthday card</a></p>
 
   <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you~ &#128158;<br>
   Moon Dragon Gang의 생일 선물이 마음에 드셨기를 바랍니다. 생일 잘 보내시고, 모든 꿈이 이루어지길 바랍니다. 우리는 당신을 사랑합니다~ &#128158;</p>
