--- a/birthday/birthdayi.html
+++ b/birthday/birthdayi.html
@@ -30,7 +30,7 @@
   </div>
     <div class="wishes">
     <p>Happy birthday Mir!<br>
-      I write you these few words to wish you a happy birthday. May your life be full of colors! May all your desires come true and turn your life into a true fairy tale! You are a beautiful person from the outside as from the inside I am happy to know you you are a ray of sunshine I love you mir Mister Bad boy	&#129782;&#128156;&#128009;
+      I write you these few words to wish you a happy birthday. May your life be full of colors! May all your desires come true and turn your life into a true fairy tale! You are a beautiful person from the outside as from the inside I am happy to know you you are a ray of sunshine I love you mir Mister Bad boy&#128156;&#128009;
 </p>
     <p class="name">Izzie</p>
     </div>
