--- a/birthday/index.html
+++ b/birthday/index.html
@@ -22,10 +22,11 @@ h2 {text-align: center;}
   <p>I want to welcome Mir to your birthday webpage. <br>
     나는 당신의 생일 웹 페이지에 Mir를 환영하고 싶습니다</p>
   <p>This is for you, our <br> &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
+  <p> Also known as, "grandpa", "mircasso", "giraffe", "mirry", "very very dangerous bad boy", "moon man", and so many more </p>
 <p style="color: purple;"> &#9753;I hope you enjoy this gift that we have prepared for you in your special day. Enjoy!&#10087;<br>
  &#9753;특별한 날 저희가 준비한 이 선물을 즐기시기 바랍니다. 즐기다!&#9753;</p>
 
-<h3 style="color: blue;">&#127881;Happy Birthday Videos&#127881;<br>
+<h3 style="color: #38B4FE;">&#127881;Happy Birthday Videos&#127881;<br>
  &#127881;생일 축하 비디오&#127881;</h3>
   <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;</p>
 
@@ -34,18 +35,20 @@ h2 {text-align: center;}
   
   <p><a href="https://jaramilloa.github.io/birthday/Vid%C3%A9o.mov"> Izzie birthday video</a></p>
   
- <h3 style="color: blue;">&#127881;Happy Birthday Cards&#127881;<br>
+ <h3 style="color: #38B4FE;">&#127881;Happy Birthday Cards&#127881;<br>
   &#127881;생일 축하 카드&#127881;</h3>
-    <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Nillo birthday card</a></p>
-    <p><a href="https://jaramilloa.github.io/birthday/birthdayt.html">Tokkito birthday card</a></p>
-    <p><a href="https://jaramilloa.github.io/birthday/birthdayj.html"> Jay birthday card</a></p>
-    <p><a href="https://jaramilloa.github.io/birthday/birthdayjf.html"> Jackie birthday card</a></p>
-    <p><a href="https://jaramilloa.github.io/birthday/birthdaym.html"> Mie birthday card</a></p>
-    <p><a href="https://jaramilloa.github.io/birthday/birthdayi.html"> Izzie birthday card</a></p>
+  <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
+  
+    <p><a href="https://jaramilloa.github.io/birthday/birthday.html">Nillo Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayt.html">Tokkito Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayj.html"> Jay Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayjf.html"> Jackie Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdaym.html"> Mie Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayi.html"> Izzie Birthday Card</a></p>
 
 
-  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you~ &#128158;<br>
-  Moon Dragon Gang의 생일 선물이 마음에 드셨기를 바랍니다. 생일 잘 보내시고, 모든 꿈이 이루어지길 바랍니다. 우리는 당신을 사랑합니다~ &#128158;</p>
+  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you to the moon and back~ &#127769;&#128158;<br>
+  Moon Dragon Gang의 생일 선물이 마음에 드셨기를 바랍니다. 생일 잘 보내시고, 모든 꿈이 이루어지길 바랍니다. 우리는 당신을 달까지 그리고 뒤로 사랑합니다~ &#127769;&#128158;</p>
 
 
   <footer style="text-align: center;">
