--- a/birthday/index.html
+++ b/birthday/index.html
@@ -35,6 +35,7 @@ h2 {text-align: center;}
   
   <p><a href="https://jaramilloa.github.io/birthday/Vid%C3%A9o.mov"> Izzie birthday video</a></p>
   <p><a href="https://jaramilloa.github.io/birthday/temp_1656572931588.1966683.mp4"> Punkin birthday video</a></p>
+  <p><a href="https://jaramilloa.github.io/birthday/20220619_191337%20(1).mp4"> Liza & Mason birthday video</a></p>
   
  <h3 style="color: #38B4FE;">&#127881;Happy Birthday Cards&#127881;<br>
   &#127881;생일 축하 카드&#127881;</h3>
