--- a/birthday/index.html
+++ b/birthday/index.html
@@ -33,7 +33,7 @@ h2 {text-align: center;}
 <p>The following are/is video compilations that have been put together from your fans for you ^-^ <br>
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
   
-  <p><a href=""> Izzie birthday video</a></p>
+  <p><a href="https://jaramilloa.github.io/birthday/Izzie_Video.mp4"> Izzie birthday video</a></p>
   <p><a href="https://jaramilloa.github.io/birthday/temp_1656572931588.1966683.mp4"> Punkin birthday video</a></p>
   <p><a href="https://jaramilloa.github.io/birthday/20220619_191337%20(1).mp4"> Liza & Mason birthday video</a></p>
   
