--- a/birthday/index.html
+++ b/birthday/index.html
@@ -13,12 +13,13 @@ h2 {text-align: center;}
 </style>
 </head>
 <body>
-  <h1>&#127882;Welcome to Moon Dragon Birthday Gift!&#127882;</h1>
-  <h2>&#127882;Moon Dragon 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
+  <h1>&#127882;Welcome to Moon Dragon Gang Birthday Gift!&#127882;</h1>
+  <h2>&#127882;Moon Dragon Gang 생일 선물에 오신 것을 환영합니다!&#127882;</h2>
   
   <h2><span style='font-size:100px;'>&#127874;</span></h2>
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
-  <p>For starters, I want to introduce myself. This is Nillo, or Wizord according to Tokkito.</p>
+  <p>For starters, I would like to introduce myself. This is Nillo, also known as Mosquito or Wizord (according to Tokkito). I wanted to create something special and unique for a very very special day, the day a very very dangerous bad boy was born. Your fans who are all so wonderful helped me with this gift. Also, sorry in advance if any translation is wrong &#128517; <br>
+  우선 제 소개를 하고 싶습니다. 이것은 Mosquito 또는 Wizord라고도 알려진 Nillo입니다(Tokkito에 따르면). 나는 아주 아주 특별한 날, 아주 아주 위험한 나쁜 소년이 태어난 날을 위해 특별하고 독특한 것을 만들고 싶었습니다. 너무 멋진 팬분들이 이 선물을 도와주셨어요. 또한 번역이 틀리면 미리 죄송합니다 <br></p>
   <p>I want to welcome Mir to your birthday webpage. <br>
     나는 당신의 생일 웹 페이지에 Mir를 환영하고 싶습니다</p>
   <p>This is for you, our <br> &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
@@ -52,6 +53,13 @@ h2 {text-align: center;}
 
   <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you to the moon and back~ &#127769;&#128158;<br>
   Moon Dragon Gang의 생일 선물이 마음에 드셨기를 바랍니다. 생일 잘 보내시고, 모든 꿈이 이루어지길 바랍니다. 우리는 당신을 달까지 그리고 뒤로 사랑합니다~ &#127769;&#128158;</p>
+  
+  <p> Ps. We are also very proud of you and your achievements! <br>
+    추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
+  
+  <p> Another Ps. Make sure you sleep well, your health is very important. With that being said take care of yourself mentally, physically and emotionally. So that means to eat well and sleep at least 6 hours. AT LEAST. You thought I wouldn't scold you huh. Well here I am. You better not laugh at this. I'm already embarassed for even writing this. Anyways. Take care of yourself. Like I said, we wish you the very very best. We wish you all so much happiness. Never forget that MDG loves you to the moon and back &#128420;<br>
+  또 다른 Ps. 잘 자고 건강이 매우 중요합니다. 그 말과 함께 정신적, 육체적, 감정적으로 자신을 돌보십시오. 따라서 적어도 6시간 이상 잘 먹고 잘 자야 합니다. 적어도. 당신은 내가 당신을 꾸짖지 않을 것이라고 생각했습니다. 자, 여기 있습니다. 당신은 이것에 웃지 않는 것이 좋습니다. 이 글을 쓰기도 벌써 부끄럽다. 어쨌든. 몸조심하세요. 내가 말했듯이, 우리는 당신에게 최선을 다하기를 바랍니다. 우리는 당신에게 많은 행복을 기원합니다. MDG가 당신을 사랑한다는 사실을 절대 잊지 마세요.
+  </p>
 
 
   <footer style="text-align: center;">
