--- a/birthday/birthday3.html
+++ b/birthday/birthday3.html
@@ -31,24 +31,25 @@
     <div class="wishes">
     <p>Dear Mir, <br>
       先輩！お誕生日おめでとうございます😊この歳も素敵な1年であります様に願っています。 <br>
-      Sunny 
-      サニー
-      Thank you for the smile upon your face
-      君の笑顔にありがとう
-      Sunny
-      サニー
+      
+      Sunny<br> 
+      サニー<br>
+      Thank you for the smile upon your face<br>
+      君の笑顔にありがとう<br>
+      Sunny<br>
+      サニー<br>
       Thank you, thank you for the gleam
       that flows with grace
-      思いやりにあふれるきらめきを
-      ありがとう
+      思いやりにあふれるきらめきを<br>
+      ありがとう<br>
 
-      You’re my spark of nature’s fire
-      君は僕の花火なのさ
-      You’re my sweet complete desire
-      君は僕の愛しい願望なのさ
-      Sunny one so true, yes, I love you
-      サニーそれは真実なんだ
-      そうさ愛してるよ
+      You’re my spark of nature’s fire<br>
+      君は僕の花火なのさ<br>
+      You’re my sweet complete desire<br>
+      君は僕の愛しい願望なのさ<br>
+      Sunny one so true, yes, I love you<br>
+      サニーそれは真実なんだ<br>
+      そうさ愛してるよ<br>
 
       byボニーM    "sunny"
       </p>
