--- a/birthday/index.html
+++ b/birthday/index.html
@@ -57,8 +57,8 @@ h2 {text-align: center;}
   <p> Ps. We are also very proud of you and your achievements! <br>
     추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
   
-  <p> Another Ps. Make sure you sleep well, your health is very important. With that being said take care of yourself mentally, physically and emotionally. So that means to eat well and sleep at least 6 hours. AT LEAST. You thought I wouldn't scold you huh. Well here I am. You better not laugh at this. I'm already embarassed for even writing this. Anyways. Take care of yourself. Like I said, we wish you the very very best. We wish you all so much happiness. Never forget that MDG loves you to the moon and back &#128420;<br>
-  또 다른 Ps. 잘 자고 건강이 매우 중요합니다. 그 말과 함께 정신적, 육체적, 감정적으로 자신을 돌보십시오. 따라서 적어도 6시간 이상 잘 먹고 잘 자야 합니다. 적어도. 당신은 내가 당신을 꾸짖지 않을 것이라고 생각했습니다. 자, 여기 있습니다. 당신은 이것에 웃지 않는 것이 좋습니다. 이 글을 쓰기도 벌써 부끄럽다. 어쨌든. 몸조심하세요. 내가 말했듯이, 우리는 당신에게 최선을 다하기를 바랍니다. 우리는 당신에게 많은 행복을 기원합니다. MDG가 당신을 사랑한다는 사실을 절대 잊지 마세요.
+  <p>
+  또 다른 Ps. 잘 자고 건강이 매우 중요합니다. 그 말과 함께 정신적, 육체적, 감정적으로 자신을 돌보십시오. 따라서 적어도 6시간 이상 잘 먹고 잘 자야 합니다. 적어도. 당신은 내가 당신을 꾸짖지 않을 것이라고 생각했습니다. 자, 여기 있습니다. 당신은 이것에 웃지 않는 것이 좋습니다. 이 글을 쓰기도 벌써 부끄럽다. 어쨌든. 몸조심하세요. 내가 말했듯이, 우리는 당신에게 최선을 다하기를 바랍니다. 우리는 당신에게 많은 행복을 기원합니다. MDG가 당신을 사랑한다는 사실을 절대 잊지 마세요. &#128420;
   </p>
 
 
