--- a/birthday/index.html
+++ b/birthday/index.html
@@ -18,8 +18,7 @@ h2 {text-align: center;}
   
   <h2><span style='font-size:100px;'>&#127874;</span></h2>
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
-  <p>For starters, I would like to introduce myself. This is Nillo, also known as Mosquito or Wizord (according to Tokkito). I wanted to create something special and unique for a very very special day, the day a very very dangerous bad boy was born. Your fans who are all so wonderful helped me with this gift. Also, sorry in advance if any translation is wrong &#128517; <br>
-  우선 제 소개를 하고 싶습니다. 이것은 Mosquito 또는 Wizord라고도 알려진 Nillo입니다(Tokkito에 따르면). 나는 아주 아주 특별한 날, 아주 아주 위험한 나쁜 소년이 태어난 날을 위해 특별하고 독특한 것을 만들고 싶었습니다. 너무 멋진 팬분들이 이 선물을 도와주셨어요. 또한 번역이 틀리면 미리 죄송합니다 &#128517;<br></p>
+  <p>우선 제 소개를 하고 싶습니다. 이것은 Mosquito 또는 Wizord라고도 알려진 Nillo입니다(Tokkito에 따르면). 나는 아주 아주 특별한 날, 아주 아주 위험한 나쁜 소년이 태어난 날을 위해 특별하고 독특한 것을 만들고 싶었습니다. 너무 멋진 팬분들이 이 선물을 도와주셨어요. 또한 번역이 틀리면 미리 죄송합니다 &#128517;<br></p>
   <p>I want to welcome Mir to your birthday webpage. <br>
     나는 당신의 생일 웹 페이지에 Mir를 환영하고 싶습니다</p>
   <p>This is for you, our <br> &#9789;&#128009;<em>dragon moonchild!</em> &#128009;&#9790;</p>
