--- a/birthday/index.html
+++ b/birthday/index.html
@@ -36,6 +36,9 @@ h2 {text-align: center;}
   <p><a href="https://jaramilloa.github.io/birthday/Izzie_Updated_Video.mp4"> Izzie birthday video</a></p>
   <p><a href="https://jaramilloa.github.io/birthday/temp_1656572931588.1966683.mp4"> Punkin birthday video</a></p>
   <p><a href="https://jaramilloa.github.io/birthday/20220619_191337%20(1).mp4"> Liza & Mason birthday video</a></p>
+  <p><a href="https://jaramilloa.github.io/birthday/Green_Apple.mp4"> Green Apple video</a></p>
+  <p><a href=" "> Estie video</a></p>
+  <p><a href-" "> Rolly video</a></p>
   
  <h3 style="color: #38B4FE;">&#127881;Happy Birthday Cards&#127881;<br>
   &#127881;생일 축하 카드&#127881;</h3>
@@ -50,6 +53,7 @@ h2 {text-align: center;}
     <p><a href="https://jaramilloa.github.io/birthday/birthday3.html"> East Birthday Card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdayma.html"> Marianne Birthday Card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdaymana.html"> Mana Birthday Card</a></p>
+    <p><a href=" "> Seira Birthday Card</a></p>
 
 
   <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you to the moon and back~ &#127769;&#128158;<br>
