--- a/birthday/birthdayseira.html
+++ b/birthday/birthdayseira.html
@@ -42,8 +42,7 @@
 
 미르の困る顔を見るのが面白いのです☺
 
-産まれてきてくれて出会ってくれてありがとう♡おめでとうございます🥂‪<br>
-
+産まれてきてくれて出会ってくれてありがとう♡おめでとうございます🥂‪<br><br>
 
 
 미르 생일 축하해🕊 ͗ ͗〰︎︎♡
