--- a/birthday/index.html
+++ b/birthday/index.html
@@ -53,8 +53,8 @@ h2 {text-align: center;}
     <p><a href="https://jaramilloa.github.io/birthday/birthday3.html"> East Birthday Card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdayma.html"> Marianne Birthday Card</a></p>
     <p><a href="https://jaramilloa.github.io/birthday/birthdaymana.html"> Mana Birthday Card</a></p>
-    <p><a href=" "> Rolly Birthday Card</a></p>
-    <p><a href=" "> Seira Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayrolly.html"> Rolly Birthday Card</a></p>
+    <p><a href="https://jaramilloa.github.io/birthday/birthdayseira.html"> Seira Birthday Card</a></p>
 
 
   <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you to the moon and back~ &#127769;&#128158;<br>
