--- a/birthday/birthdayi.html
+++ b/birthday/birthdayi.html
@@ -29,7 +29,7 @@
   <h3 class="toyou">TO YOU!</h3>  
   </div>
     <div class="wishes">
-    <p>Happy birthday Mir!<br>
+    <p>Happy birthday Mir!<br><br>
       I write you these few words to wish you a happy birthday. May your life be full of colors! May all your desires come true and turn your life into a true fairy tale! You are a beautiful person from the outside as from the inside I am happy to know you you are a ray of sunshine I love you mir Mister Bad boy&#128156;&#128009;
 </p>
     <p class="name">Izzie</p>
