--- a/birthday/index.html
+++ b/birthday/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mir's Birthday Page </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
