--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -6,6 +6,11 @@
   <title>Ugi's Birthday Page </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
+    
+ body {
+   background: #0000;
+   color: white;}
+    
 h1 {text-align: center;}
 h2 {text-align: center;}
   h3 {text-align: center;}
