--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -26,7 +26,7 @@ h2 {text-align: center;}
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
 
 
-<h3 style="color: #38B4FE;">&#127881;Happy Birthday Videos&#127881;<br>
+<h3 style="color: #FFD700;">&#127881;Happy Birthday Videos&#127881;<br>
  &#127881;생일 축하 비디오&#127881;</h3>
   <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;</p>
 
@@ -35,14 +35,14 @@ h2 {text-align: center;}
   
 
   
- <h3 style="color: #38B4FE;">&#127881;Happy Birthday Cards&#127881;<br>
+ <h3 style="color: #FFD700;">&#127881;Happy Birthday Cards&#127881;<br>
   &#127881;생일 축하 카드&#127881;</h3>
   <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
   
 
 
 
-  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Moon Dragon Gang. We hope that you have a good birthday, and that all of your dreams come true. We love you to the moon and back~ &#127769;&#128158;<br>
+  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Quen Family. We hope that you have a good birthday, and that all of your dreams come true. We love you so much! &#127769;&#128158;<br>
 
   <p> Ps. We are also very proud of you and your achievements! <br>
     추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
