--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -18,7 +18,7 @@ h2 {text-align: center;}
   <h1>&#127882;Welcome to Quen Birthday Gift!&#127882;</h1>
 
   
-  <h2><span style='font-size:100px;'>&#127874;</span></h2>
+  <h2><span style='font-size:100px;'>&#127874;생일 축하해 우기! 당신은 많은 사람들에게 정말 놀라운 친구였습니다. 당신은 사람들의 삶에 많은 기쁨과 웃음을 가져다주었습니다. 내가 당신을 처음 만났을 때 나는 당신을 모기로 알고 있었습니다. 그리고 결국 나는 당신이 성장하는 것을 계속 지켜봤습니다. 네가 카페에서 일하는 모습을 조금씩 지켜봤던 기억이 난다. 그 후 나는 오프닝을 목격할 수 있었다. 이제 여기 있습니다. 마치 시간이 날아가는 것처럼 느껴집니다. 당신은 많은 것을 성취했습니다. 그리고 저는 이 모든 놀라운 일들을 목격하기 위해 이곳에 오게 되어 기쁩니다. 당신은 항상 많은 사람들을 환영하고 지원했습니다. 나는 당신의 팬을 대신하여 말합니다. 당신과 함께 이 놀라운 추억을 우리에게 주셔서 감사합니다. 우리는 당신에게 행복한 생일을 기원합니다. 당신은 당신이 많은 사람들에게 사랑 받고 있다는 것을 알고 있습니다. 당신의 모든 소원이 이루어지기를 바랍니다. 계속해서 더 많은 추억을 만들 수 있기를!</span></h2>
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
 
 
